# AADC_2015_KAtana

./: LICENSE.md  README.md  changelog.txt
calibration_files/car1/: IR_front_center_shortrange.xml  IR_front_left_longrange.xml  IR_rear_left_shortrange.xml  SteerAngleActuator.xml  SteerAngleSensor.xml
calibration_files/car2/: IR_front_center_longrange.xml  IR_front_right_longrange.xml  IR_front_right_shortrange.xml  IR_rear_center_shortrange.xml  IR_rear_right_shortrange.xml  SteerAngleActuator.xml  SteerAngleSensor.xml  xtionSettings.xml
config/competition/BaseConfig/: IncludeConfig.xml
config/development/KATANADriving/: KATANADriving.prj
doc/: Doxyfile
doc/html/: annotated.html  annotated.js  classes.html  dir_07d4bb984305a08fd28096fd93c5eaa7.html  dir_07d4bb984305a08fd28096fd93c5eaa7.js  dir_1ac167f7d5b6b59c1a5f8f711eb65b54.html  dir_1ac167f7d5b6b59c1a5f8f711eb65b54.js  dir_357ea5b45a3102a361d7127d1d40daf4.html  dir_357ea5b45a3102a361d7127d1d40daf4.js  dir_41e786d6ceb185237edab77631132f4e.html  dir_45b5f8cf4acd7fdc50d403e7effbf063.html  dir_45b5f8cf4acd7fdc50d403e7effbf063.js  dir_630978b4d9a703aa339d80adc9060950.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_764c3eafd106eb507bb15f0c1c31efbc.html  dir_764c3eafd106eb507bb15f0c1c31efbc.js  dir_764d270efe19a21918303667ecbc11b1.html  dir_764d270efe19a21918303667ecbc11b1.js  dir_7ae93aa7e83a6fae760c37e5a13a93d5.html  dir_7ae93aa7e83a6fae760c37e5a13a93d5.js  dir_7f29d0430546c8ee6563269bfcd04caa.html  dir_7f29d0430546c8ee6563269bfcd04caa.js  dir_8ad0e7b1eaced33fc642355f9e2adbdd.html  dir_8ad0e7b1eaced33fc642355f9e2adbdd.js  dir_95004a1ab28d47ff63067a1d7e06c07d.html  dir_95004a1ab28d47ff63067a1d7e06c07d.js  dir_a5dd9d73416c83fed283926dedcf7a31.html  dir_a5dd9d73416c83fed283926dedcf7a31.js  dir_b8b1b331b5085891aff1cfcde823ca9b.html  dir_b8b1b331b5085891aff1cfcde823ca9b.js  dir_bae10d2873ac4473834db70a4ce2a6f9.html  dir_be979f526eb8ce8608aa36f72e14b5ad.html  dir_be979f526eb8ce8608aa36f72e14b5ad.js  dir_bf0627c79eaa05e472db4d05c4a37772.html  dir_ce358c7d11209a1bbd18b71fb4325287.html  dir_ce358c7d11209a1bbd18b71fb4325287.js  dir_d49c6cd9be179980cacf3e14e592af75.html  dir_d4e2df275ed78dae5e1fc83de5b88ffc.html  dir_dda85ca1fd0a7274018d665240133f44.html  (+67 more)
doc/html/search/: all_0.js  (+52 more)
src/: AADCConfig.cmake  build_base.sh  build_user.sh  xtionUsbReset.sh
src/adtfUser/: CMakeLists.txt  Readme.txt
src/adtfUser/common/katanaGeometry/: CMakeLists.txt
src/adtfUser/common/katanaGeometry/include/: Angle.h  ExtendedPoint.h  Line.h  Point.h  Pose.h  PoseStamped.h  Trajectory.h  TrajectoryInterpolator.h
src/adtfUser/common/katanaGeometry/src/: Angle.cpp  ExtendedPoint.cpp  Line.cpp  Point.cpp  Pose.cpp  PoseStamped.cpp  Trajectory.cpp  TrajectoryInterpolator.cpp
src/adtfUser/common/katanaSignals/: CMakeLists.txt
src/adtfUser/common/katanaSignals/include/: SignalAverage.h  SignalQueue.h  SignalVariance.h
src/adtfUser/common/katanaWorld/: CMakeLists.txt
src/adtfUser/common/katanaWorld/include/: Obstacle.h  PinConversions.h  PoseWithTime.h  RoadBase.h  RoadJunction.h  RoadPatch.h  RoadSign.h
src/adtfUser/common/katanaWorld/src/: Obstacle.cpp  RoadBase.cpp  RoadJunction.cpp  RoadPatch.cpp  RoadSign.cpp
src/adtfUser/common/tinyxml2/: CMakeLists.txt
src/adtfUser/katana_mission_control/: CMakeLists.txt
src/adtfUser/katana_mission_control/etc/: aadc_route.xml  aadc_route_parking.xml
src/adtfUser/katana_mission_control/src/filter/: CMakeLists.txt  filter.cpp  filter.h
src/adtfUser/katana_mission_control/src/helperClasses/: CMakeLists.txt  Config.cpp  Config.h  HelperFunctions.cpp  HelperFunctions.h  WorldPlausibilityChecker.cpp  WorldPlausibilityChecker.h
src/adtfUser/katana_mission_control/src/mission_control/: CMakeLists.txt  CollisionHandler.cpp  CollisionHandler.h  DrivingStripChanger.cpp  DrivingStripChanger.h  LanetrackerJobManager.cpp  LanetrackerJobManager.h  LateralController.cpp  LateralController.h  LightController.cpp  LightController.h  MotionPlanning.cpp  MotionPlanning.h  ParkingAssistant.cpp  ParkingAssistant.h  PositionController.cpp  PositionController.h  RoadSection.cpp  RoadSection.h  StateBase.cpp  StateBase.h  StateManager.h  System.cpp  System.h  VelocityControl.cpp  VelocityControl.h  maneuver.cpp  maneuver.h  mission_control.cpp  mission_control.h  world.cpp  world.h
src/adtfUser/katana_mission_control/src/mission_control/states/driving_states/: DriveBase.cpp  DriveBase.h  DriveFinished.cpp  DriveFinished.h  DriveInitialize.cpp  DriveInitialize.h  DriveJunction.cpp  DriveJunction.h  DriveNormal.cpp  DriveNormal.h  DriveParking.cpp  DriveParking.h  DrivePullOut.cpp  DrivePullOut.h  DriveTurn.cpp  DriveTurn.h
src/adtfUser/katana_mission_control/src/mission_control/states/main_states/: MainStateBase.cpp  MainStateBase.h  StateDriving.cpp  StateDriving.h  StateError.cpp  StateError.h  StateRecovering.cpp  StateRecovering.h  StateWaiting.cpp  StateWaiting.h
src/adtfUser/katana_mission_control/tools/: test_geometry.cpp  test_maneuver.cpp  test_obstacles.cpp  test_position_controller.cpp  test_world.cpp
src/adtfUser/katana_mission_control/tools/demoDataGenerators/: CMakeLists.txt  DemoObstacleGenerator.cpp  DemoObstacleGenerator.h  DemoPatchGenerator.cpp  DemoPatchGenerator.h
src/adtfUser/lanetracker/: CMakeLists.txt
src/adtfUser/lanetracker/src/filter/: CMakeLists.txt  Lanetracker.cpp  Lanetracker.h
src/adtfUser/lanetracker/test/: ManagedPoseRotationTest.cpp  ManagedPoseTest.cpp  MatcherTest.cpp  StitcherTest.cpp
src/adtfUser/localization/src/odometry/src/: CMakeLists.txt  odometry_filter.cpp  odometry_filter.h  stdafx.h
src/adtfUser/localization/src/odometrySimulator/src/: CMakeLists.txt  filter.cpp  filter.h
src/adtfUser/markerdetection/: CMakeLists.txt  MarkerDetection.cpp  MarkerDetection.h  SignQueue.cpp  SignQueue.h
src/adtfUser/obstacleDetection/src/obstacle_ir_us/: CMakeLists.txt  filter.cpp  filter.h
src/adtfUser/obstacleDetection/src/xtion_obstacle/: CMakeLists.txt  IPM.cpp  IPM.h  obstactle_detection.cpp  obstactle_detection.h
(+68 files in other folders)
